tests/baselines/reference/parserEqualsGreaterThanAfterFunction1.errors.txt
parserEqualsGreaterThanAfterFunction1.ts(1,9): error TS7010: '(Missing)', which lacks return-type annotation, implicitly has an 'any' return type.
parserEqualsGreaterThanAfterFunction1.ts(1,10): error TS1003: Identifier expected.


==== parserEqualsGreaterThanAfterFunction1.ts (2 errors) ====
    function =>
            
!!! error TS7010: '(Missing)', which lacks return-type annotation, implicitly has an 'any' return type.
             ~~
!!! error TS1003: Identifier expected.